# obsi_notes

./: .env.example  .gitignore  LICENSE  README.md  llama-cpp-python.md  pyproject.toml  setup.py
docs/: responses_documentaiton_openai.txt
src/: cli_interface.py  main.py
src/config/: config.yaml  settings.py
src/core/: deepseek_handler.py  llm_handler.py  lmstudio_handler.py  openai_handler.py
src/utils/: atomic_note_extractor.py  flashcard.py  flashcard_generator.py  helpers.py  note_parser.py
tests/: chat_with_deepseek.py  chat_with_llm.py  test_llm_handler.py  test_note_parser.py
